--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_native_splash: ^2.3.11
+  flutter_native_splash: ^2.4.0
   animated_splash_screen: ^1.3.0
   flutter_onboarding_slider: ^1.0.11
   firebase_core: ^2.30.1
@@ -57,10 +57,29 @@ dependencies:
   page_transition: "^2.0.9"
   flutter_chat_ui: ^1.6.10 
   animated_bottom_navigation_bar: ^1.2.0
+  google_nav_bar: ^5.0.6
+  dio: ^5.4.1
+  webview_flutter: ^4.7.0
+  
+  
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  color: "#013c38"
+  image: "Assets/images/logo-color.png"
   
   
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "Assets/images/logo-color.png"
+  min_sdk_android: 21
   flutter_test:
     sdk: flutter
 
@@ -105,17 +124,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: Assets/fonts/Poppins-Regular.ttf
+        
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
